# pkg/api/person/person.pb.go
@@ -1,191 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.31.0
-// 	protoc        v4.24.3
-// source: api/person/person.proto
-
-package person
-
-import (
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	sync "sync"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-type Person struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Name        string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
-	Surname     string `protobuf:"bytes,2,opt,name=surname,proto3" json:"surname,omitempty"`
-	Patronymic  string `protobuf:"bytes,3,opt,name=patronymic,proto3" json:"patronymic,omitempty"`
-	Age         uint64 `protobuf:"varint,4,opt,name=age,proto3" json:"age,omitempty"`
-	Gender      string `protobuf:"bytes,5,opt,name=gender,proto3" json:"gender,omitempty"`
-	Nationality string `protobuf:"bytes,6,opt,name=nationality,proto3" json:"nationality,omitempty"`
-}
-
-func (x *Person) Reset() {
-	*x = Person{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_api_person_person_proto_msgTypes[0]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *Person) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*Person) ProtoMessage() {}
-
-func (x *Person) ProtoReflect() protoreflect.Message {
-	mi := &file_api_person_person_proto_msgTypes[0]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use Person.ProtoReflect.Descriptor instead.
-func (*Person) Descriptor() ([]byte, []int) {
-	return file_api_person_person_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *Person) GetName() string {
-	if x != nil {
-		return x.Name
-	}
-	return ""
-}
-
-func (x *Person) GetSurname() string {
-	if x != nil {
-		return x.Surname
-	}
-	return ""
-}
-
-func (x *Person) GetPatronymic() string {
-	if x != nil {
-		return x.Patronymic
-	}
-	return ""
-}
-
-func (x *Person) GetAge() uint64 {
-	if x != nil {
-		return x.Age
-	}
-	return 0
-}
-
-func (x *Person) GetGender() string {
-	if x != nil {
-		return x.Gender
-	}
-	return ""
-}
-
-func (x *Person) GetNationality() string {
-	if x != nil {
-		return x.Nationality
-	}
-	return ""
-}
-
-var File_api_person_person_proto protoreflect.FileDescriptor
-
-var file_api_person_person_proto_rawDesc = []byte{
-	0x0a, 0x17, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x65, 0x72, 0x73, 0x6f, 0x6e, 0x2f, 0x70, 0x65, 0x72,
-	0x73, 0x6f, 0x6e, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xa2, 0x01, 0x0a, 0x06, 0x50, 0x65,
-	0x72, 0x73, 0x6f, 0x6e, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x73, 0x75, 0x72, 0x6e,
-	0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x73, 0x75, 0x72, 0x6e, 0x61,
-	0x6d, 0x65, 0x12, 0x1e, 0x0a, 0x0a, 0x70, 0x61, 0x74, 0x72, 0x6f, 0x6e, 0x79, 0x6d, 0x69, 0x63,
-	0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a, 0x70, 0x61, 0x74, 0x72, 0x6f, 0x6e, 0x79, 0x6d,
-	0x69, 0x63, 0x12, 0x10, 0x0a, 0x03, 0x61, 0x67, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x04, 0x52,
-	0x03, 0x61, 0x67, 0x65, 0x12, 0x16, 0x0a, 0x06, 0x67, 0x65, 0x6e, 0x64, 0x65, 0x72, 0x18, 0x05,
-	0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x67, 0x65, 0x6e, 0x64, 0x65, 0x72, 0x12, 0x20, 0x0a, 0x0b,
-	0x6e, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x61, 0x6c, 0x69, 0x74, 0x79, 0x18, 0x06, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x0b, 0x6e, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x61, 0x6c, 0x69, 0x74, 0x79, 0x42, 0x23,
-	0x5a, 0x21, 0x2f, 0x70, 0x65, 0x72, 0x73, 0x6f, 0x6e, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
-	0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x65, 0x72, 0x73, 0x6f, 0x6e, 0x3b, 0x70, 0x65, 0x72,
-	0x73, 0x6f, 0x6e, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
-}
-
-var (
-	file_api_person_person_proto_rawDescOnce sync.Once
-	file_api_person_person_proto_rawDescData = file_api_person_person_proto_rawDesc
-)
-
-func file_api_person_person_proto_rawDescGZIP() []byte {
-	file_api_person_person_proto_rawDescOnce.Do(func() {
-		file_api_person_person_proto_rawDescData = protoimpl.X.CompressGZIP(file_api_person_person_proto_rawDescData)
-	})
-	return file_api_person_person_proto_rawDescData
-}
-
-var file_api_person_person_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
-var file_api_person_person_proto_goTypes = []interface{}{
-	(*Person)(nil), // 0: Person
-}
-var file_api_person_person_proto_depIdxs = []int32{
-	0, // [0:0] is the sub-list for method output_type
-	0, // [0:0] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
-}
-
-func init() { file_api_person_person_proto_init() }
-func file_api_person_person_proto_init() {
-	if File_api_person_person_proto != nil {
-		return
-	}
-	if !protoimpl.UnsafeEnabled {
-		file_api_person_person_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*Person); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_api_person_person_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   1,
-			NumExtensions: 0,
-			NumServices:   0,
-		},
-		GoTypes:           file_api_person_person_proto_goTypes,
-		DependencyIndexes: file_api_person_person_proto_depIdxs,
-		MessageInfos:      file_api_person_person_proto_msgTypes,
-	}.Build()
-	File_api_person_person_proto = out.File
-	file_api_person_person_proto_rawDesc = nil
-	file_api_person_person_proto_goTypes = nil
-	file_api_person_person_proto_depIdxs = nil
-}
